# sfarro

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  tags
CMakeModules/: FindCheck.cmake  FindFUSE.cmake
documentation/: project_plan.md  reading_list.txt  spec.md
documentation/html/: annotated.html  classes.html  config_8h_source.html  constants_8h.html  constants_8h_source.html  dir_44982d2040ea9719161b3dc33ce9c5c5.html  dir_71e7f272c9827555f1db07e5078a58d5.html  dir_f9f57474a95662196c06f72a9409d6fc.html  files.html  globals.html  globals_func.html  index.html  monitor_8h.html  monitor_8h_source.html  params_8h.html  params_8h_source.html  remount_8h.html  remount_8h_source.html  sfarro_8c.html  sfarro_8h.html  sfarro_8h_source.html  structvfs__state.html  timer_8h.html  timer_8h_source.html  vfs_8h.html  vfs_8h_source.html
documentation/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  classes_0.js  files_3.js  files_4.js  files_6.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
documentation/latex/: annotated.tex  constants_8h.tex  dir_44982d2040ea9719161b3dc33ce9c5c5.tex  dir_71e7f272c9827555f1db07e5078a58d5.tex  dir_f9f57474a95662196c06f72a9409d6fc.tex  files.tex  monitor_8h.tex  params_8h.tex  refman.tex  remount_8h.tex  sfarro_8c.tex  sfarro_8h.tex  structvfs__state.tex  timer_8h.tex  vfs_8h.tex
documentation/project_logbook/: 07-10-15.md  08-10-15.md  12-10-15.md  13-10-15.md  14-10-15.md
documentation/project_logbook/Week 1/: 06-10-15.md  07-10-15.md
documentation/project_logbook/Week 2/: 13-10-15.md  15-10-15.md
documentation/project_logbook/Week 3/: 16-10-15.md  20-10-15.md  21-10-15.md  22-10-15.md
documentation/project_logbook/Week 4/: 23|24-10-15.md  25-10-15.md  26-10-15.md  28-10-15.md  29-10-15.md  30-10-15.md
documentation/project_logbook/Week 5/: 04-11-15.md  05-11-15.md
documentation/project_logbook/Week 6/: 11-11-15.md  9|10-11-15.md
documentation/project_logbook/Week 7/: 18-11-15.md  21-11-15.md  22-11-15.md  25-11-15.md
documentation/project_logbook/Week 8/: 30-11-15.md
documentation/project_updates/: Week_1.md  Week_2.md  Week_3.md  Week_4.md  Week_5.md  Week_6.md
sfarro/: CMakeLists.txt  log.h  params.h  remount.c  remount.h  timer.c  timer.h  vfs.c  vfs.h
src/: CMakeLists.txt  Makefile.am  config.h  constants.h  filesystem_handler.c  filesystem_handler.h  log.c  log.h  monitor.c  monitor.h  params.h  remount.c  remount.h  sfarro.c  sfarro.h  timer.c  timer.h  vfs.c  vfs.h  vfs_ro.c  vfs_ro.h
test/: CMakeLists.txt  test_timer.cc
test/basic_tests/: CMakeLists.txt  test_remount.cpp  test_remount.h  test_timer.cpp  test_timer.h
test/lib/gtest-1.7.0/: CMakeLists.txt
test/lib/gtest-1.7.0/samples/: sample1_unittest.cc
test/lib/gtest-1.7.0/test/: gtest_main_unittest.cc
tests/: Makefile.am  main-test.sh  test-utils.sh
util/: kill_sfarro.sh
